# InsomniaToolset

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doc_template.xml
.github/workflows/: cmake.yml  release.yaml
common/: CMakeLists.txt
common/include/insomnia/: insomnia.hpp
common/include/insomnia/classes/: detail.hpp  foliage.hpp  gameplay.hpp  moby.hpp  plant.hpp  region.hpp  resource.hpp  shader.hpp  shrub.hpp  sound.hpp  tie.hpp  water.hpp  zone.hpp
common/include/insomnia/internal/: base.hpp  settings.hpp  vertex.hpp
common/src/: reflected.cpp  serialize.cpp
effect/: CMakeLists.txt  extract_effect.cpp
extract/: CMakeLists.txt  extract.cpp  extract_v2.cpp  gltf.cpp  gltf_ighw.hpp  region_to_gltf.cpp
levelmain/: CMakeLists.txt  extract.cpp
sound/: CMakeLists.txt  extract_sound.cpp
